ingress.yaml
apiVersion: networking.k8s.io/v1  
kind: Ingress  
metadata:  
  name: ingress  
  namespace: dev  
  annotations:  
    kubernetes.io/ingress.class: "gce"  # Google-managed Ingress  
    networking.gke.io/managed-certificates: cert
    kubernetes.io/ingress.global-static-ip-name: "dev-static-ip"  
    kubernetes.io/ingress.allow-http: "false"  
    networking.gke.io/v1beta1.FrontendConfig: frontend-config
spec:  
  rules:  
    - host: example.com
      http:  
        paths:  
          - path: /  
            pathType: Prefix  
            backend:  
              service:  
                name: ui  
                port:  
                  number: 8080
                port:  
                  number: 8080
